# haskell-opengl-tutorial

./: README.md  haskell-gl.cabal  todo.org
shaders/: teapot.frag  teapot.vert  textures.frag  textures.vert  tutorial3Vert.vert  tutorial4Vert.vert  tutorial5Frag.frag  tutorial5Vert.vert
src/: ModelTest.hs  Shader.hs  TexturedCube.hs  Tutorial1.hs  Tutorial2.hs  Tutorial3.hs  Tutorial4.hs  Tutorial5.hs
